<resources>
    <string name="app_name">TalkHive</string>
    <string name="signUpButtonText">Sign Up</string>
    <string name="have_login_account_text">Already account?signIn</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="abcd_gmail_com">abcd@gmail.com</string>
    <string name="login_btn">Login</string>
    <string name="dontHave_account">Don\'t have account?signUp</string>
    <string name="verification_hint">00000</string>
    <string name="opposite_chat">opposite chat</string>
    <string name="user_chat">user chat</string>
    <string name="type_msg_hint">Hello!!!!How are you doing?</string>
    <string name="wed_9_11pm">wed, 9:11pm</string>
    <string name="sample_text">fsdhfsdfsdfsdfsdf</string>
    <string name="name_hint">John</string>
    <string name="signin">Add</string>
    <string name="cancel">Cancel\n</string>
    <string name="talkhive">TalkHive</string>
    <string name="add_user">Add Email</string>
</resources>