<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding"
        android:orientation="vertical"
        android:layout_gravity="center"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/Login_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widgets_height"
            android:layout_marginStart="@dimen/widgets_margin_start"
            android:layout_marginEnd="@dimen/widgets_margin_end"
            android:layout_marginTop="@dimen/widgets_margin_top"
            android:padding="@dimen/widgets_padding"
            android:hint="@string/abcd_gmail_com"
            android:inputType="textEmailAddress"
            android:background="@color/transparent"/>
        <EditText
            android:id="@+id/Login_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widgets_height"
            android:layout_marginStart="@dimen/widgets_margin_start"
            android:layout_marginEnd="@dimen/widgets_margin_end"
            android:layout_marginTop="@dimen/widgets_margin_top"
            android:padding="@dimen/widgets_padding"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@color/transparent" />

        <EditText
            android:id="@+id/Login_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widgets_height"
            android:layout_marginStart="@dimen/widgets_margin_start"
            android:layout_marginEnd="@dimen/widgets_margin_end"
            android:layout_marginTop="@dimen/widgets_margin_top"
            android:padding="@dimen/widgets_padding"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:background="@color/transparent" />
        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_btn"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/widgets_margin_top"
            android:padding="@dimen/widgets_padding"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/have_login_account_text"
            android:padding="5dp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</FrameLayout>